--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@babel/runtime": "7.0.0-beta.55",
+    "@portis/web3": "^2.0.0-beta.15",
     "ajv": "^6.9.1",
     "bip39": "^2.4.0",
     "eslint-plugin-node": "^8.0.1",
