--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@portis/web3": "^2.0.0-beta.15",
     "ajv": "^6.9.1",
     "bip39": "^2.4.0",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.14",
     "eslint-plugin-node": "^8.0.1",
     "ethereum-blockies": "^0.1.1",
     "ethereumjs-wallet": "^0.6.0",
@@ -25,6 +27,7 @@
     "truffle-contract": "^4.0.6",
     "truffle-hdwallet-provider": "1.0.4",
     "vue": "^2.5.3",
+    "vue-awesome-countdown": "^1.0.12",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.0",
     "vuex-persist": "^2.0.0",
