--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "ethereum-blockies": "^0.1.1",
     "ethereumjs-wallet": "^0.6.0",
     "gravatar-api": "^1.5.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
     "solidity-sha3": "^0.4.1",
     "truffle-contract": "^4.0.6",
     "truffle-hdwallet-provider": "1.0.4",
