--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ethereumjs-wallet": "^0.6.0",
     "gravatar-api": "^1.5.0",
     "node-sass": "^4.11.0",
+    "openzeppelin-solidity": "^2.1.3",
     "sass-loader": "^7.1.0",
     "solidity-sha3": "^0.4.1",
     "truffle-contract": "^4.0.6",
