--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "openzeppelin-solidity": "^2.1.3",
     "sass-loader": "^7.1.0",
     "solidity-sha3": "^0.4.1",
+    "truffle": "^5.0.7",
     "truffle-contract": "^4.0.6",
     "truffle-hdwallet-provider": "1.0.4",
     "vue": "^2.5.3",
