--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,11 @@
 {
-  "presets": [
-    ["@babel/env", {
-      "modules": false,
-      "targets": {
-        "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
-      }
-    }]
+  "presets": ["@babel/preset-env"
+    // ["@babel/env", {
+    //   "modules": false,
+    //   "targets": {
+    //     "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
+    //   }
+    // }]
   ],
   "plugins": ["@babel/plugin-transform-runtime"],
   "env": {
