--- a/package.json
+++ b/package.json
@@ -11,19 +11,24 @@
         "e2e": "node test/e2e/runner.js",
         "test": "npm run unit && npm run e2e",
         "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
-        "test:contracts": "NODE_ENV=test npx truffle test"
+        "test:contracts": "NODE_ENV=test npx truffle test",
+        "relayer": "NODE_ENV=development nodemon --exec babel-node relayer/relayer.js"
     },
     "dependencies": {
+        "@babel/polyfill": "^7.2.5",
         "@babel/runtime": "7.0.0-beta.55",
         "@portis/web3": "^2.0.0-beta.15",
         "ajv": "^6.9.1",
         "bip39": "^2.5.0",
+        "body-parser": "^1.18.3",
         "bootstrap": "^4.3.1",
         "bootstrap-vue": "^2.0.0-rc.14",
+        "cors": "^2.8.5",
         "eslint-plugin-node": "^8.0.1",
         "ethereum-blockies": "^0.1.1",
         "ethereumjs-wallet": "^0.6.0",
         "gravatar-api": "^1.5.0",
+        "helmet": "^3.15.1",
         "node-sass": "^4.11.0",
         "openzeppelin-solidity": "^2.1.3",
         "sass-loader": "^7.1.0",
@@ -40,8 +45,9 @@
     },
     "devDependencies": {
         "@babel/core": "^7.3.3",
+        "@babel/node": "^7.2.2",
         "@babel/plugin-transform-runtime": "^7.2.0",
-        "@babel/preset-env": "^7.3.1",
+        "@babel/preset-env": "^7.3.4",
         "@babel/register": "^7.0.0",
         "autoprefixer": "^9.4.7",
         "babel-eslint": "^10.0.1",
@@ -66,7 +72,7 @@
         "eslint-plugin-standard": "^4.0.0",
         "eslint-plugin-vue": "^5.2.1",
         "eventsource-polyfill": "^0.9.6",
-        "express": "^4.16.2",
+        "express": "^4.16.4",
         "extract-text-webpack-plugin": "4.0.0-alpha.0",
         "file-loader": "^3.0.1",
         "friendly-errors-webpack-plugin": "^1.6.1",
@@ -84,6 +90,7 @@
         "karma-webpack": "^4.0.0-rc.6",
         "mocha": "^5.2.0",
         "nightwatch": "^1.0.19",
+        "nodemon": "^1.18.10",
         "opn": "^5.1.0",
         "optimize-css-assets-webpack-plugin": "^5.0.1",
         "ora": "^3.1.0",
