--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "truffle": "^5.0.7",
         "truffle-contract": "^4.0.6",
         "truffle-hdwallet-provider": "1.0.4",
+        "truffle-privatekey-provider": "^1.1.0",
         "vue": "^2.5.3",
         "vue-awesome-countdown": "^1.0.12",
         "vue-router": "^3.0.2",
