--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
         "vue-router": "^3.0.2",
         "vuex": "^3.1.0",
         "vuex-persist": "^2.0.0",
-        "web3": "^1.0.0-beta.35",
+        "web3": "1.0.0-beta.35",
         "web3-provider-engine": "^13.3.2"
     },
     "devDependencies": {
