--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "vue": "^2.5.3",
         "vue-awesome-countdown": "^1.0.12",
         "vue-router": "^3.0.2",
+        "vue-toasted": "^1.1.26",
         "vuex": "^3.1.0",
         "vuex-persist": "^2.0.0",
         "web3": "1.0.0-beta.35",
