--- a/relayer/package.json
+++ b/relayer/package.json
@@ -19,7 +19,7 @@
 		"helmet": "^3.15.1",
 		"nodemon": "^1.18.10",
 		"truffle-privatekey-provider": "^1.1.0",
-		"web3": "^1.0.0-beta.35"
+		"web3": "1.0.0-beta.35"
 	},
 	"author": "",
 	"license": "ISC"
